--- a/Riksantikvarieämbetet Ksamsök.ipynb
+++ b/Riksantikvarieämbetet Ksamsök.ipynb
@@ -7,7 +7,7 @@
     "## Riksantikvarieämbetet RAÄ - Ksamsök kulturarvsdata \n",
     "version 0.1 \n",
     "\n",
-    "Check sv:Wikipedia -> kulturarvsdata links from External [links url](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&target=http%3A%2F%2Fkulturarvsdata.se&offset=1) problem we have a limit of 60000 se WIkipedia Bybrunnen for workaround\n",
+    "Check sv:Wikipedia -> kulturarvsdata links from External [links url](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&target=http%3A%2F%2Fkulturarvsdata.se&offset=1) problem we have a limit of 60000 se Wikipedia Bybrunnen for [workaround](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&offset=55000&target=http%3A%2F%2Fkulturarvsdata.se)\n",
     "\n",
     "Result: **OK:  52725 \t not ok 7275**\n",
     "\n",
@@ -19,15 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cleanupstring(s):\n",
-    "    out_s = s\n",
-    "    while '  ' in out_s:\n",
-    "        out_s = out_s.strip().replace('  ', ' ')\n",
-    "    return out_s, len(s)-len(out_s) \n",
     "def checkURL(externalurl):\n",
     "    r = http.request('GET', externalurl)\n",
     "    if r.status != 200:\n",
@@ -7724,7 +7719,6 @@
     "notok = 0\n",
     "dftot = pd.DataFrame()\n",
     "for i in trange(0,60000,5000):\n",
-    "    print (i)\n",
     "    url = urlbase + str(i)\n",
     "    r = http.request('GET', url) \n",
     "    soup = BeautifulSoup(r.data, \"html.parser\")\n",
