--- a/Riksantikvarieämbetet Ksamsök.ipynb
+++ b/Riksantikvarieämbetet Ksamsök.ipynb
@@ -5,15 +5,17 @@
    "metadata": {},
    "source": [
     "## Riksantikvarieämbetet RAÄ - Ksamsök kulturarvsdata \n",
-    "version 0.1 \n",
+    "version 0.2 \n",
     "\n",
-    "Check sv:Wikipedia -> kulturarvsdata links from External [links url](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&target=http%3A%2F%2Fkulturarvsdata.se&offset=1) problem we have a limit of 60000 se Wikipedia Bybrunnen for [workaround](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&offset=55000&target=http%3A%2F%2Fkulturarvsdata.se)\n",
+    "Check sv:Wikipedia -> kulturarvsdata links from External [links url](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&target=http%3A%2F%2Fkulturarvsdata.se&offset=1) problem we have a limit of 60000 see Wikipedia Bybrunnen for [workaround](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&offset=55000&target=http%3A%2F%2Fkulturarvsdata.se)\n",
     "\n",
     "Result: **OK:  52725 \t not ok 7275**\n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksantikvarie%C3%A4mbetet%20Ksamsök.ipynb)\n",
     "* [Wikipedia Bybrunnen](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&offset=55000&target=http%3A%2F%2Fkulturarvsdata.se)\n",
-    "* GIST test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2)\n",
+    "* GIST \n",
+    " * test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2)\n",
+    " * test 2 [check all WD P1260 links](https://gist.github.com/salgo60/a4ebde4f0a279d5f9479aeaf7b846403)\n",
     "* [Facebook fråga Riksantikvarieämbetet](https://www.facebook.com/riksantikvarieambetet/posts/10158191730201970)"
    ]
   },
