--- a/Riksantikvarieämbetet Ksamsök.ipynb
+++ b/Riksantikvarieämbetet Ksamsök.ipynb
@@ -16,7 +16,7 @@
     "* GIST \n",
     " * test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2)\n",
     " * test 2 [check all WD P1260 links](https://gist.github.com/salgo60/a4ebde4f0a279d5f9479aeaf7b846403)\n",
-    "* [Facebook fråga Riksantikvarieämbetet](https://www.facebook.com/riksantikvarieambetet/posts/10158191730201970)"
+    "* [Facebook fråga Riksantikvarieämbetet](https://www.facebook.com/riksantikvarieambetet/posts/10158191730201970) 2020 jun 29 15:07"
    ]
   },
   {
