--- a/Riksantikvarieämbetet Ksamsök.ipynb
+++ b/Riksantikvarieämbetet Ksamsök.ipynb
@@ -14,8 +14,8 @@
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksantikvarie%C3%A4mbetet%20Ksamsök.ipynb)\n",
     "* [Wikipedia Bybrunnen](https://sv.wikipedia.org/w/index.php?title=Special:L%C3%A4nks%C3%B6kning&limit=5000&offset=55000&target=http%3A%2F%2Fkulturarvsdata.se)\n",
     "* GIST \n",
-    " * test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2)\n",
-    " * test 2 [check all WD P1260 links](https://gist.github.com/salgo60/a4ebde4f0a279d5f9479aeaf7b846403)\n",
+    " * test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2) **OK: 2535 not ok 4009**\n",
+    " * test 2 [check all WD P1260 links](https://gist.github.com/salgo60/a4ebde4f0a279d5f9479aeaf7b846403) **OK: 155926 not ok 4605**\n",
     "* [Facebook fråga Riksantikvarieämbetet](https://www.facebook.com/riksantikvarieambetet/posts/10158191730201970) 2020 jun 29 15:07"
    ]
   },
