--- a/Riksdagens ledamöter.ipynb
+++ b/Riksdagens ledamöter.ipynb
@@ -4,15 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Riksdagen ledamöter \n",
+    "## Riksdagen ledamöter - Swedish MP\n",
+    "version 1.0\n",
     "\n",
-    "* Denna [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledamöter.ipynb)  \n",
+    "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Riksdagens%20ledamöter.ipynb)  \n",
     "  * [GITHUB Riksdagen](https://github.com/salgo60/Riksdagen)\n",
     "* [Sökfråga JSON](http://data.riksdagen.se/personlista/?rdlstatus=samtliga&utformat=json&termlista=)  1991 ledamöter\n",
     "\n",
     "* Wikipedia [WikiProject_Sweden/Swedish_Riksdag_documents](https://www.wikidata.org/wiki/Wikidata:WikiProject_Sweden/Swedish_Riksdag_documents)\n",
     "\n",
-    "\n"
+    "\n",
+    "* intressent_id = Wikidata Property P1214 \n",
+    "* sourceid = Wikidata Property P8388 \n"
    ]
   },
   {
