--- a/Riksantikvarieämbetet Ksamsök.ipynb
+++ b/Riksantikvarieämbetet Ksamsök.ipynb
@@ -16,7 +16,7 @@
     "* GIST \n",
     " * test [länkröta](https://gist.github.com/salgo60/110cc4eb2541b025de92f96c4546cdc2) **OK: 2535 not ok 4009**\n",
     " * test 2 [check all WD P1260 links](https://gist.github.com/salgo60/a4ebde4f0a279d5f9479aeaf7b846403) **OK: 155926 not ok 4605**\n",
-    " * [test Wikipedia 164 143 links](https://gist.github.com/salgo60/f33116056e2698186b9ee424626246fd) had 7602 unique URL with linkrot\n",
+    " * [test Wikipedia 164 143 links](https://gist.github.com/salgo60/f33116056e2698186b9ee424626246fd) had 7602 unique URL with linkrot [filelist](https://gist.github.com/salgo60/4f2fa0370a5541712fd274e5b9e84b26)\n",
     "* [Facebook fråga Riksantikvarieämbetet](https://www.facebook.com/riksantikvarieambetet/posts/10158191730201970) 2020 jun 29 15:07"
    ]
   },
