--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -8,7 +8,16 @@
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
     "* [DCAT Spec](https://www.w3.org/TR/vocab-dcat-2/) Data Catalog Vocabulary (DCAT) - Version 2\n",
-    "\n",
+    "* in Swedish [input to the DCAT-AP-SE](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898) that we need better version management and use DOI for datasets. Now with copy datasets everywhere we get a chaos to understand what data we use and if we can trust it. Compare [ORCID usage video](https://www.youtube.com/watch?v=a1Rijk_TMHA) \n",
+    "  * the same challenge is with the data that every piece of data need something like [Linked data]() to explain what e.g. a label Stockholm does it stands for\n",
+    "    * a city = [Q94385](https://www.wikidata.org/wiki/Q94385)\n",
+    "    * a Municipality = [Q506250](https://www.wikidata.org/wiki/Q506250)\n",
+    "    * a county = [Q104231](https://www.wikidata.org/wiki/Q104231)\n",
+    "    * and is language label \n",
+    "      * **zh** [斯德哥尔摩](https://www.wikidata.org/wiki/Q1754?uselang=zh) \n",
+    "      * same as **ar** [ستوكهولم](https://www.wikidata.org/wiki/Q1754?uselang=zh) \n",
+    "      * same as **sv** [Stockholm](https://www.wikidata.org/wiki/Q1754?uselang=sv)\n",
+    "    \n",
     "**Problem 1:** Strings not Things metadata is nit handled with care keywords is not Linked data and language dependent\n",
     "\n",
     "European Data Portal Helpdesk / Improvement and suggestions **DESK-7510**\n",
