--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -8,17 +8,19 @@
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
     "* [DCAT Spec](https://www.w3.org/TR/vocab-dcat-2/) Data Catalog Vocabulary (DCAT) - Version 2\n",
-    "* in Swedish [input to the DCAT-AP-SE](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898) that we need better version management and use DOI for datasets. Now with copy datasets everywhere we get a chaos to understand what data we use and if we can trust it. Compare [ORCID usage video](https://www.youtube.com/watch?v=a1Rijk_TMHA) \n",
+    "* in Swedish [input to the DCAT-AP-SE](https://github.com/DIGGSweden/DCAT-AP-SE/issues/72#issuecomment-653731898) that we need better version management and use DOI for datasets. Now with copy datasets everywhere we get a chaos to understand what dataset we use, what version of it and if we can trust it and use it as a source for our data. Compare [ORCID usage video](https://www.youtube.com/watch?v=a1Rijk_TMHA) \n",
     "  * the same challenge is with the data that every piece of data need something like [Linked data]() to explain what e.g. a label Stockholm does it stands for\n",
     "    * a city = [Q94385](https://www.wikidata.org/wiki/Q94385)\n",
     "    * a Municipality = [Q506250](https://www.wikidata.org/wiki/Q506250)\n",
     "    * a county = [Q104231](https://www.wikidata.org/wiki/Q104231)\n",
-    "    * and is language label \n",
+    "    * today I see keywords in DCAT-AP as literals i.e. string with a language label --> we get this mess \n",
     "      * **zh** [斯德哥尔摩](https://www.wikidata.org/wiki/Q1754?uselang=zh) \n",
-    "      * same as **ar** [ستوكهولم](https://www.wikidata.org/wiki/Q1754?uselang=zh) \n",
-    "      * same as **sv** [Stockholm](https://www.wikidata.org/wiki/Q1754?uselang=sv)\n",
+    "      * is that same as **ar** [ستوكهولم](https://www.wikidata.org/wiki/Q1754?uselang=zh)  \n",
+    "      * is that same as **sv** [Stockholm](https://www.wikidata.org/wiki/Q1754?uselang=sv) \n",
+    "  * versioning, traceability, public identifiers and linked data makes Open Data scale. Today I feel no one is in charge pointing in the right direction and taking responsibility for the quality.... we see the same pattern with museums and how they send objects to an Europeana portal see status of that project that I guess started in 2012 and now 2020 we have a mess... they have [55 million objects](https://classic.europeana.eu/portal/en/about.html) and a chaos and in the example below they start add fake metadata\n",
+    "     * [Carl Larsson who is that - sadly Europeana doesnt know --> #Metadatadebt](https://minancestry.blogspot.com/2020/03/carl-larsson-who-is-that-sadly.html)  \n",
     "    \n",
-    "**Problem 1:** Strings not Things metadata is nit handled with care keywords is not Linked data and language dependent\n",
+    "**Problem 1:** Strings not Things metadata is not handled with care keywords is not Linked data and language dependent\n",
     "\n",
     "European Data Portal Helpdesk / Improvement and suggestions **DESK-7510**\n",
     "```\n",
@@ -31,8 +33,8 @@
     " I think you should use Things not strings when describing the data\n",
     "```\n",
     "\n",
-    "e.g. https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-38.jsonld?useNormalizedId=true&locale=en\n",
-    "you have keywords with a language tag why not a knowledgetag\n",
+    "e.g. [json europeandataportal resource-28](https://www.europeandataportal.eu/data/api/datasets/https-catalog-skl-se-store-1-resource-38.jsonld?useNormalizedId=true&locale=en)\n",
+    "you have keywords with a language i.e. its asking for problems\n",
     "\n",
     "```\n",
     "keyword:\n",
@@ -78,8 +80,10 @@
     "1. Good metadata about the datasets and someone who takes responsibilty... if this was business critical data no one should accept \"we store the metadata as is .... so it is not on us to change that.\"\n",
     "  1. You **get reposiblities** and you **take responsiblities** we dont need gatekeepers adding no value\n",
     "1. We miss dicussion platforms if we in Sweden should get data we need to contact 290 municipial units by phone.... **this will not scale** People are spending time on \"Linked in\" likeing each other instead of using real system for [Public backlogs](https://www.youtube.com/watch?v=502ILHjX9EE) were we can ask question and track issues \n",
+    "1. Good patterna like describing the quality of delivered data as [ShEx](http://shex.io/)\n",
     "1. An urgency for delivering good quality\n",
-    "1. "
+    "1. Traceability of errors in dataset where you get a help test ticket that you can follow unti its in production compare using free Facebook tool [Phabricator at Wikidata](https://phabricator.wikimedia.org/tag/wikidata/) \n",
+    "  1. platforms for coordinate data between different sources ie. if source X deliver COVID-19 data with fields xxx tha source Y commit to that in helpdesk ticket yyyy listen to me [asking question about this at SWIB-18](https://youtu.be/K0l4fv5uUvg?t=1579)   "
    ]
   },
   {
