--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
+    "version 1.0 \n",
+    "\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
     "* [DCAT Spec](https://www.w3.org/TR/vocab-dcat-2/) Data Catalog Vocabulary (DCAT) - Version 2\n",
@@ -83,7 +85,7 @@
     "1. Good patterna like describing the quality of delivered data as [ShEx](http://shex.io/)\n",
     "1. An urgency for delivering good quality\n",
     "1. Traceability of errors in dataset where you get a help test ticket that you can follow unti its in production compare using free Facebook tool [Phabricator at Wikidata](https://phabricator.wikimedia.org/tag/wikidata/) \n",
-    "  1. platforms for coordinate data between different sources ie. if source X deliver COVID-19 data with fields xxx tha source Y commit to that in helpdesk ticket yyyy listen to me [asking question about this at SWIB-18](https://youtu.be/K0l4fv5uUvg?t=1579)   "
+    "  1. platforms for coordinate data between different sources ie. if source X deliver COVID-19 data with fields xxx tha source Y commit to that in helpdesk ticket yyyy listen to me [asking question about this 2018-dec at SWIB-18](https://youtu.be/K0l4fv5uUvg?t=1579)   "
    ]
   },
   {
