--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -122,8 +122,9 @@
     }
    ],
    "source": [
-    "# Number of Categories / themes abd theur number of datasets \n",
-    "\n",
+    "# Number of Categories / themes abd their number of datasets \n",
+    "# --> result 25114 datasets compare 1 093 704 datasets says \n",
+    "# https://www.europeandataportal.eu/data/datasets?locale=en \n",
     "import sys\n",
     "from SPARQLWrapper import SPARQLWrapper, JSON\n",
     "\n",
@@ -1016,12 +1017,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We have 12247 datasets if the query is ok\n",
+    "### We have 12247 datasets if the query is ok \n",
     "* no accessRiughts\n",
     "* no created\n",
     "* no license\n",
     "* no Taxanomy\n",
-    "* some keywords in english"
+    "* some keywords in english  \n",
+    "\n",
+    "compare [www.europeandataportal.eu/data/datasets](https://www.europeandataportal.eu/data/datasets?locale=en ) it says 1 093 704 datasets  "
    ]
   },
   {
