--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -22,7 +22,7 @@
     "  * versioning, traceability, public identifiers and linked data makes Open Data scale. Today I feel no one is in charge pointing in the right direction and taking responsibility for the quality.... we see the same pattern with museums and how they send objects to an Europeana portal see status of that project that I guess started in 2012 and now 2020 we have a mess... they have [55 million objects](https://classic.europeana.eu/portal/en/about.html) and a chaos and in the example below they start add fake metadata\n",
     "     * [Carl Larsson who is that - sadly Europeana doesnt know --> #Metadatadebt](https://minancestry.blogspot.com/2020/03/carl-larsson-who-is-that-sadly.html)  \n",
     "    \n",
-    "**Problem 1:** Strings not Things metadata is not handled with care keywords is not Linked data and language dependent\n",
+    "**Problem 1: Question to EDM helpdesk 2020-06-24** Strings not Things. Metadata is not handled with care in the European data portal e.g. keywords is not Linked data and is just a text string with a language tag.....\n",
     "\n",
     "European Data Portal Helpdesk / Improvement and suggestions **DESK-7510**\n",
     "```\n",
