--- a/SVT Sentiment Analysis Using Python.ipynb
+++ b/SVT Sentiment Analysis Using Python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Sentiment Analysis Using Python\n",
+    "# SVT Sentiment Analysis Using Python\n",
     "Test if we can do the same as done in BBC see [blog](https://medium.com/@darshipatel/how-to-perform-sentiment-analysis-using-python-32746c5bd248)\n"
    ]
   },
@@ -13,7 +13,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rss = \"\""
+   ]
   }
  ],
  "metadata": {
