--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -7,8 +7,20 @@
     "# Svenskt Kvinnobiografiskt lexikon \n",
     "\n",
     "* Wikidataproperty [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
-    "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp)"
+    "  * Wikidaya ung. 1200 kopplingar SKBL\n",
+    "* SKBL databas [KARP](https://ws.spraakbanken.gu.se/ws/karp)\n",
+    "  * 1495 poster\n",
+    "  \n",
+    "### TODO\n",
+    "Borde skapa Panda som direkt hittar diff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
