--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.0 \n",
+    "version 1.01 \n",
     "\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
@@ -21,7 +21,7 @@
     "      * is that same as **sv** [Stockholm](https://www.wikidata.org/wiki/Q1754?uselang=sv) \n",
     "  * versioning, traceability, public identifiers and linked data makes Open Data scale. Today I feel no one is in charge pointing in the right direction and taking responsibility for the quality.... we see the same pattern with museums and how they send objects to an Europeana portal see status of that project that I guess started in 2012 and now 2020 we have a mess... they have [55 million objects](https://classic.europeana.eu/portal/en/about.html) and a chaos and in the example below they start add fake metadata\n",
     "     * [Carl Larsson who is that - sadly Europeana doesnt know --> #Metadatadebt](https://minancestry.blogspot.com/2020/03/carl-larsson-who-is-that-sadly.html)  \n",
-    "    \n",
+    "\n",
     "**Problem 1: Question to EDM helpdesk 2020-06-24** Strings not Things. Metadata is not handled with care in the European data portal e.g. keywords is not Linked data and is just a text string with a language tag.....\n",
     "\n",
     "European Data Portal Helpdesk / Improvement and suggestions **DESK-7510**\n",
@@ -85,7 +85,16 @@
     "1. Good patterna like describing the quality of delivered data as [ShEx](http://shex.io/)\n",
     "1. An urgency for delivering good quality\n",
     "1. Traceability of errors in dataset where you get a help test ticket that you can follow unti its in production compare using free Facebook tool [Phabricator at Wikidata](https://phabricator.wikimedia.org/tag/wikidata/) \n",
-    "  1. platforms for coordinate data between different sources ie. if source X deliver COVID-19 data with fields xxx tha source Y commit to that in helpdesk ticket yyyy listen to me [asking question about this 2018-dec at SWIB-18](https://youtu.be/K0l4fv5uUvg?t=1579)   "
+    "  1. platforms for coordinate data between different sources ie. if source X deliver COVID-19 data with fields xxx tha source Y commit to that in helpdesk ticket yyyy listen to me [asking question about this 2018-dec at SWIB-18](https://youtu.be/K0l4fv5uUvg?t=1579)    \n",
+    "  \n",
+    "#### The Google approach\n",
+    "* see Google AI blog [Building Google Dataset Search and Fostering an Open Data Ecosystem](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html)\n",
+    "\n",
+    "  * **\"Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph\"** i.e. they beloeve in [Linked Data and having a big Knowledge Graph]()\n",
+    "  * video [Introducing the Knowledge Graph](https://www.youtube.com/watch?v=mmQl6VGvX-c)\n",
+    "  \n",
+    "#### Wikidata - free open data that is linked\n",
+    "  * video [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)"
    ]
   },
   {
