--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -90,7 +90,7 @@
     "#### The Google approach\n",
     "* see Google AI blog [Building Google Dataset Search and Fostering an Open Data Ecosystem](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html)\n",
     "\n",
-    "  * **\"Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph\"** i.e. they beloeve in [Linked Data and having a big Knowledge Graph]()\n",
+    "  * **\"Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph\"** i.e. Google believe in [Linked Data and having a big Knowledge Graph]()\n",
     "  * video [Introducing the Knowledge Graph](https://www.youtube.com/watch?v=mmQl6VGvX-c)\n",
     "  \n",
     "#### Wikidata - free open data that is linked\n",
