--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.02 \n",
+    "version 1.03 \n",
     "\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
     "* [SPARQL manager](https://www.europeandataportal.eu/sparql-manager/sv/)  \n",
@@ -95,6 +95,8 @@
     "* It is very common for a dataset, in particular a popular one, to be present in more than one repository..... a way to specify the connection explicitly, through schema.org/sameAs, ..... having the same [Digital Object Identifier...](https://www.doi.org/) \n",
     "\n",
     "Comment: See how [dataverse.harvard.edu](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/PEJ5QU) use DOI --> 10.7910 is the portal and DVN/PEJ5QU is the dataset --> unique persistent identifier is [doi:10.7910/DVN/PEJ5QU](https://doi.org/10.7910/DVN/PEJ5QU)\n",
+    "\n",
+    "![DOI 10.7910 DVN/PEJ5QU ](https://user-images.githubusercontent.com/14206509/86506605-21235680-bdd1-11ea-8622-a06afe7db8b5.png)\n",
     "\n",
     "##### Reconciling to the Google Knowledge Graph\n",
     "* **\"Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph\"** i.e. Google believe in Linked Data and having a big Knowledge Graph **European data portal** nneds to do the same and not sending around literals\n",
