--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "source": [
     "### Fostering  an Open Data Echosystem to deliver good data and metadata about datasets\n",
-    "In Sweden I see a rather naive approach to open data and governancen of open data. We have since [2012 tried getting museums Digital](http://www.digisam.se/linked-open-data/). They started speaking about linked data 2012 and today 2012 they sends around text strings to Europeana --> they cat even identify an artist at museum A is the same artist B at museum B see blogpost. \n",
+    "In Sweden I see a rather naive approach to open data and governance of open data. We have since [2012 tried getting museums Digital](http://www.digisam.se/linked-open-data/). They started speaking about linked data 2012 and today 2020 they sends text strings to a museum aggregator Europeana --> they cant even identify an artist at museum A is the same artist B at museum B see [blogpost](https://minancestry.blogspot.com/2020/03/carl-larsson-who-is-that-sadly.html) --> en:Wikipedia refused link them as the [quality is so bad](https://phabricator.wikimedia.org/T243764). \n",
     "\n",
     "Things I see or miss \n",
     "1. Good metadata about the datasets and someone who takes responsibilty... if this was business critical data no one should accept \"we store the metadata as is .... so it is not on us to change that.\"\n",
