--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -682,8 +682,9 @@
     }
    ],
    "source": [
-    "# Pie of top 30 crazy that a specific keyword like COVID-19 is reused but bad managament \n",
-    "#that we dont have that for other fields\n",
+    "# Pie of top 30 \n",
+    "# crazy that a the keyword COVID-19 is so often used.....\n",
+    "# feels that all keywords that we dont have that for other fields\n",
     "plot = results.keyword.value_counts()[0:30].plot.pie(y='counts', figsize=(25, 5)) \n",
     "plt.show()"
    ]
