Update European data portal - quality of Metadata.ipynb

--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.06\n",
+    "version 1.07\n",
     "\n",
     "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portla see [map](https://w.wiki/WAg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
@@ -93,9 +93,13 @@
     "#### The Google approach\n",
     "* see Google AI blog [Building Google Dataset Search and Fostering an Open Data Ecosystem](https://ai.googleblog.com/2018/09/building-google-dataset-search-and.html)\n",
     "  * video [Introducing the Knowledge Graph](https://www.youtube.com/watch?v=mmQl6VGvX-c)\n",
-    "  \n",
-    "##### Connecting Replicas of Datasets\n",
-    "* It is very common for a dataset, in particular a popular one, to be present in more than one repository..... a way to specify the connection explicitly, through schema.org/sameAs, ..... having the same [Digital Object Identifier...](https://www.doi.org/) \n",
+    "  * **Connecting Replicas of Datasets**\n",
+    "    * _It is very common for a dataset, in particular a popular one, to be present in more than one repository..... a way to specify the connection explicitly, through schema.org/sameAs, ..... having the same [Digital Object Identifier...](https://www.doi.org/)_\n",
+    "  * **Reconciling to the Google Knowledge Graph**\n",
+    "    * _Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph_ \n",
+    "    * _This type of reconciliation opens up lots of possibilities to improve the search experience for users._\n",
+    "* [Making it easier to discover datasets](https://www.blog.google/products/search/making-it-easier-discover-datasets/)\n",
+    "  * [Guidelines for datasets](https://developers.google.com/search/docs/data-types/dataset)\n",
     "\n",
     "Comment: See how [dataverse.harvard.edu](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/PEJ5QU) use DOI --> 10.7910 is the portal and DVN/PEJ5QU is the dataset --> unique persistent identifier is [doi:10.7910/DVN/PEJ5QU](https://doi.org/10.7910/DVN/PEJ5QU)\n",
     "\n",
@@ -108,11 +112,9 @@
     "![Versioning](https://user-images.githubusercontent.com/14206509/86506761-d1de2580-bdd2-11ea-9916-9cecadcc37c7.png)  \n",
     "  \n",
     "\n",
-    "##### Reconciling to the Google Knowledge Graph\n",
-    "* **\"Therefore, we try to reconcile information mentioned in the metadata fields with the items in the Knowledge Graph\"** i.e. Google believe in Linked Data and having a big Knowledge Graph **European data portal** nneds to do the same and not sending around literals\n",
-    " \n",
     "  \n",
-    "#### Wikidata - free open data that is linked\n",
+    "#### Wikidata - a free open  that is linked\n",
+    "Wikidata is a fast growing open \"knowledge base\" why not use that. Google has its own much bigger [knowledge graph](https://en.wikipedia.org/wiki/Knowledge_Graph) but why not use Wikidata or build a \"European data portal knowledge graph\"\n",
     "  * video [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)"
    ]
   },
