--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.07\n",
+    "version 1.08\n",
     "\n",
     "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portla see [map](https://w.wiki/WAg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -688,8 +688,8 @@
    ],
    "source": [
     "# Pie of top 30 \n",
-    "# crazy that a the keyword COVID-19 is so often used.....\n",
-    "# feels that all keywords that we dont have that for other fields\n",
+    "# crazy that the keyword COVID-19 is one of the most used keywords.....\n",
+    "# feels that we lack data management\n",
     "plot = results.keyword.value_counts()[0:30].plot.pie(y='counts', figsize=(25, 5)) \n",
     "plt.show()"
    ]
