--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.08\n",
+    "version 1.09\n",
     "\n",
-    "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portla see [map](https://w.wiki/WAg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
+    "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portal see [map](https://w.wiki/WQg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
     "\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/European%20data%20portal%20-%20quality%20of%20Metadata.ipynb)\n",
