Update European data portal - quality of Metadata.ipynb

--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.09\n",
+    "version 1.10\n",
     "\n",
     "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portal see [map](https://w.wiki/WQg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
@@ -111,11 +111,16 @@
     "  \n",
     "![Versioning](https://user-images.githubusercontent.com/14206509/86506761-d1de2580-bdd2-11ea-9916-9cecadcc37c7.png)  \n",
     "  \n",
-    "\n",
+    "#### The Europeana approach\n",
+    "Started in 2012 trying to do Linked data and has failed because of museums are not skilled enough delivering quality lack of metadata zzz see [tweet](https://twitter.com/salgo60/status/1281471086035640320?s=20)\n",
     "  \n",
     "#### Wikidata - a free open  that is linked\n",
     "Wikidata is a fast growing open \"knowledge base\" why not use that. Google has its own much bigger [knowledge graph](https://en.wikipedia.org/wiki/Knowledge_Graph) but why not use Wikidata or build a \"European data portal knowledge graph\"\n",
-    "  * video [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)"
+    "  * video [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
+    "  \n",
+    "# FAIR aware\n",
+    "“Fostering FAIR Data Practices In Europe” \n",
+    "see [fairaware toolkit](https://fairaware.dans.knaw.nl/) \" It helps to assess your current level of awareness on making your datasets findable, accessible, interoperable and reusable (FAIR) before uploading them in a data repository\"\n"
    ]
   },
   {
