--- a/European data portal - quality of Metadata.ipynb
+++ b/European data portal - quality of Metadata.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# European data portal - Metadata quality\n",
-    "version 1.10\n",
+    "version 1.11\n",
     "\n",
     "**Update** we got today a new Wikidata [property P8402](https://www.wikidata.org/wiki/Property_talk:P8402) for Open Data Portal --> we can start connect objects with its data portal see [map](https://w.wiki/WQg) what is connected today see [tweet](https://twitter.com/salgo60/status/1280024337240723461?s=20)\n",
     "\n",
@@ -111,8 +111,8 @@
     "  \n",
     "![Versioning](https://user-images.githubusercontent.com/14206509/86506761-d1de2580-bdd2-11ea-9916-9cecadcc37c7.png)  \n",
     "  \n",
-    "#### The Europeana approach\n",
-    "Started in 2012 trying to do Linked data and has failed because of museums are not skilled enough delivering quality lack of metadata zzz see [tweet](https://twitter.com/salgo60/status/1281471086035640320?s=20)\n",
+    "#### The Europeana approach \n",
+    "Started in 2012 [trying to do Linked data](https://web.archive.org/web/20121118181057/http://www.niso.org/apps/group_public/download.php/9407/IP_Isaac-etal_Europeana_isqv24no2-3.pdf) and has failed because of museums are not skilled enough delivering quality metadata and Europeana is not doing the work of cleaning metadata see [tweet](https://twitter.com/salgo60/status/1281471086035640320?s=20) --> the quality was so bad that en:Wikipedia 2019 took a decision not linking Europeana because they show the wrong artist see [T243764](https://phabricator.wikimedia.org/T243764) \"en:Wikipedia has problem with the quality of Europeana...\"\n",
     "  \n",
     "#### Wikidata - a free open  that is linked\n",
     "Wikidata is a fast growing open \"knowledge base\" why not use that. Google has its own much bigger [knowledge graph](https://en.wikipedia.org/wiki/Knowledge_Graph) but why not use Wikidata or build a \"European data portal knowledge graph\"\n",
