--- a/SWEPUB - ORCID.ipynb
+++ b/SWEPUB - ORCID.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "## SWEPUB - ORCID\n",
-    "* Kundo\n",
+    "version 0.2\n",
+    "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/SWEPUB%20-%20ORCID.ipynb) \n",
+    "* [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837)\n",
     "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n"
    ]
   },
@@ -410,6 +412,13 @@
    ],
    "source": [
     "pd.DataFrame(df_concat[\"instanceOf\"].tolist()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Try to find ORCID and DOI\n"
    ]
   },
   {
