--- a/SWEPUB - ORCID.ipynb
+++ b/SWEPUB - ORCID.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## SWEPUB - ORCID\n",
-    "version 0.4\n",
+    "version 0.6\n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/SWEPUB%20-%20ORCID.ipynb) \n",
     "* [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837)\n",
     "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n"
@@ -4011,7 +4011,52 @@
    "metadata": {},
    "source": [
     "#### looks we have an ORCID   \n",
-    "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) and his same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv)"
+    "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) and his same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
+    "  * [co-authors](https://tinyurl.com/yb65gf5m)\n",
+    "  * [graf](https://tinyurl.com/ycf8zc69)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'@type': 'ORCID', 'value': 'https://orcid.org/0000-0003-1062-2789'},\n",
+       " {'@type': 'Local',\n",
+       "  'value': 'vard-mgp',\n",
+       "  'source': {'@type': 'Source', 'code': 'lu'}}]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(instanceOfdf[\"contribution\"][2000:2010].tolist()[1])[\"agent\"].tolist()[0][\"identifiedBy\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://orcid.org/0000-0003-1062-2789'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(instanceOfdf[\"contribution\"][2000:2010].tolist()[1])[\"agent\"].tolist()[0][\"identifiedBy\"][0][\"value\"]\n"
    ]
   },
   {
