--- a/SWEPUB - ORCID.ipynb
+++ b/SWEPUB - ORCID.ipynb
@@ -8,7 +8,12 @@
     "version 0.6\n",
     "* This [notebook](https://github.com/salgo60/open-data-examples/blob/master/SWEPUB%20-%20ORCID.ipynb) \n",
     "* [Kundo question](https://kundo.se/org/swepub/d/api-for-amnesklassificering/#c3571837)\n",
-    "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n"
+    "* [datamodell/swepub-bibframe](https://www.kb.se/samverkan-och-utveckling/swepub/datamodell/swepub-bibframe.html)\n",
+    "\n",
+    "see at the end where we find\n",
+    "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) he is same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
+    "  * [co-authors](https://tinyurl.com/yb65gf5m)\n",
+    "  * [graf](https://tinyurl.com/ycf8zc69)  \n"
    ]
   },
   {
@@ -3990,7 +3995,7 @@
    "metadata": {},
    "source": [
     "## Looks we have an ORCID   \n",
-    "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) and his same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
+    "* Magnus C Persson [0000-0003-1062-2789](https://orcid.org/0000-0003-1062-2789) he is same as [WD Q88134673](https://www.wikidata.org/wiki/Q88134673?uselang=sv) --> [Scholia](https://scholia.toolforge.org/author/Q88134673) ->\n",
     "  * [co-authors](https://tinyurl.com/yb65gf5m)\n",
     "  * [graf](https://tinyurl.com/ycf8zc69)  "
    ]
